unpackaged/objects/Deployment_Status_Phase__c.object
<CustomObject>
  <description>Ex Deployment Phases</description>
  <fields>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Call</fullName>
        </value>
        <value>
          <fullName>E-mail</fullName>
        </value>
        <value>
          <fullName>Meeting</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Country__c</fullName>
    <formula>Deployment_Status_Report__r.Country__r.Name</formula>
    <label>Country</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Deployment_Status_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Objcet for describe all the steps and milestones of the deployment process</description>
    <label>Deployment Status Report</label>
    <referenceTo>Deployment_Status_Report__c</referenceTo>
    <relationshipLabel>ProjectMilestones</relationshipLabel>
    <relationshipName>Deployment_Status_Phases</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Main_Contact_Name__c</fullName>
    <formula>Main_Contact__r.Name__c &amp; " " &amp;  Main_Contact__r.Surname__c</formula>
    <label>Main Contact Name</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Main_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Contact</label>
    <referenceTo>User_Role__c</referenceTo>
    <relationshipName>Deployment_Status_Phases</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Meeting_Date__c</fullName>
    <label>Milestone Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Meeting_Description__c</fullName>
    <label>Milestone Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Milestone_Detail__c</fullName>
    <label>Milestone Detail</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Executive One SFDC Meeting</fullName>
        </value>
        <value>
          <fullName>Deployment Go Ahead Preparations</fullName>
        </value>
        <value>
          <fullName>Internal Briefing</fullName>
        </value>
        <value>
          <fullName>Training Planning Meeting</fullName>
        </value>
        <value>
          <fullName>Change Mngt &amp; Bus Orientation</fullName>
        </value>
        <value>
          <fullName>Project Brief Development</fullName>
        </value>
        <value>
          <fullName>Start-up Meeting</fullName>
        </value>
        <value>
          <fullName>Bus Req &amp; Gap Workshop</fullName>
        </value>
        <value>
          <fullName>Design Meetings &amp; Design</fullName>
        </value>
        <value>
          <fullName>Implementation &amp; Doc</fullName>
        </value>
        <value>
          <fullName>One SFDC Project Meeting</fullName>
        </value>
        <value>
          <fullName>Territory Management &amp; Legacy data Migration</fullName>
        </value>
        <value>
          <fullName>Train the Trainer\Superuser Training</fullName>
        </value>
        <value>
          <fullName>Translations</fullName>
        </value>
        <value>
          <fullName>Country Deploy Status</fullName>
        </value>
        <value>
          <fullName>End-user Training</fullName>
        </value>
        <value>
          <fullName>Legacy Data Load</fullName>
        </value>
        <value>
          <fullName>GO LIVE</fullName>
        </value>
        <value>
          <fullName>Post-go live meeting</fullName>
        </value>
        <value>
          <fullName>Follow-up</fullName>
        </value>
        <value>
          <fullName>Delayed</fullName>
          <isActive>false</isActive>
          <label>Delayed</label>
        </value>
        <value>
          <fullName>Done/Passed</fullName>
          <isActive>false</isActive>
          <label>Done/Passed</label>
        </value>
        <value>
          <fullName>In Progress</fullName>
          <isActive>false</isActive>
          <label>In Progress</label>
        </value>
        <value>
          <fullName>Not Started</fullName>
          <isActive>false</isActive>
          <label>Not Started</label>
        </value>
        <value>
          <fullName>Project Meeting 1</fullName>
          <isActive>false</isActive>
          <label>Project Meeting 1</label>
        </value>
        <value>
          <fullName>Project Meeting 2</fullName>
          <isActive>false</isActive>
          <label>Project Meeting 2</label>
        </value>
        <value>
          <fullName>Project Meeting 3</fullName>
          <isActive>false</isActive>
          <label>Project Meeting 3</label>
        </value>
        <value>
          <fullName>Project meeting 4</fullName>
          <isActive>false</isActive>
          <label>Project meeting 4</label>
        </value>
        <value>
          <fullName>Project meeting 5</fullName>
          <isActive>false</isActive>
          <label>Project meeting 5</label>
        </value>
        <value>
          <fullName>Project meeting 6</fullName>
          <isActive>false</isActive>
          <label>Project meeting 6</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Participants__c</fullName>
    <label>Participants</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Milestones</relationshipLabel>
    <relationshipName>ProjectMilestone</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Not Started</fullName>
        </value>
        <value>
          <fullName>In Progress</fullName>
        </value>
        <value>
          <fullName>Delayed</fullName>
        </value>
        <value>
          <fullName>Done/Passed</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Topics__c</fullName>
    <label>Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Adoption</fullName>
        </value>
        <value>
          <fullName>Agreement on Design &amp; responsabilities</fullName>
        </value>
        <value>
          <fullName>Background</fullName>
        </value>
        <value>
          <fullName>Brainstorming about best practice and worst practice</fullName>
        </value>
        <value>
          <fullName>Brainstorming about the project</fullName>
        </value>
        <value>
          <fullName>Business Process Description</fullName>
        </value>
        <value>
          <fullName>Communicate Deployment Decision</fullName>
        </value>
        <value>
          <fullName>Data.com Info</fullName>
        </value>
        <value>
          <fullName>Data Migration</fullName>
        </value>
        <value>
          <fullName>Deep-dive demo on ONE SFDC</fullName>
          <isActive>false</isActive>
          <label>Deep-dive demo on ONE SFDC</label>
        </value>
        <value>
          <fullName>Design &amp; Implementation time schedule</fullName>
        </value>
        <value>
          <fullName>Design discussion</fullName>
        </value>
        <value>
          <fullName>Discuss Analytics</fullName>
        </value>
        <value>
          <fullName>Discuss Business Rules</fullName>
        </value>
        <value>
          <fullName>Discuss KPI</fullName>
        </value>
        <value>
          <fullName>E-learning date schedule</fullName>
        </value>
        <value>
          <fullName>End-user Training</fullName>
        </value>
        <value>
          <fullName>Follow-up discussion</fullName>
        </value>
        <value>
          <fullName>Freezing Users in production</fullName>
        </value>
        <value>
          <fullName>Gap Analysis &amp; local requirements</fullName>
        </value>
        <value>
          <fullName>Go with the Project</fullName>
        </value>
        <value>
          <fullName>Hardware</fullName>
        </value>
        <value>
          <fullName>Implementation of local Requirement</fullName>
        </value>
        <value>
          <fullName>Investigation of their interest and readiness</fullName>
        </value>
        <value>
          <fullName>Mapping the information still missing</fullName>
        </value>
        <value>
          <fullName>One SFDC Introduction</fullName>
        </value>
        <value>
          <fullName>Order Management</fullName>
        </value>
        <value>
          <fullName>Organization</fullName>
        </value>
        <value>
          <fullName>Project Brief</fullName>
        </value>
        <value>
          <fullName>Project KPI Analysis</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>Project Milestone</label>
  <nameField>
    <label>Project Milestone Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>ProjectMilestones</pluralLabel>
  <recordTypes>
    <active>true</active>
    <fullName>Project_Milestone</fullName>
    <label>Project Milestone</label>
  </recordTypes>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>